--- a/Java Script/Node/aula11-webPack/package.json
+++ b/Java Script/Node/aula11-webPack/package.json
@@ -12,10 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.6",
-    "express": "^4.17.1",
     "core-js": "^3.18.1",
     "css-loader": "^6.3.0",
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.13",
     "regenerator-runtime": "^0.13.9",
     "style-loader": "^3.3.0"
   },
