--- a/React/reactmodelo/package.json
+++ b/React/reactmodelo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "modeloreact",
+  "name": "reactmodelo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -34,12 +34,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/eslint-plugin": "^7.14.5",
-    "eslint": "^8.3.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.5.0"
   }
 }
