--- a/Type Script/package.json
+++ b/Type Script/package.json
@@ -13,6 +13,9 @@
     "@types/node": "^17.0.21"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
+    "eslint": "^8.10.0",
     "ts-node": "^10.6.0",
     "typescript": "^4.6.2"
   }
