--- a/TypeScript/baseTypeScript/package.json
+++ b/TypeScript/baseTypeScript/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^17.0.21"
+    "@types/node": "^17.0.21",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
+    "@types/validator": "^13.7.1",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "eslint": "^8.10.0",
