--- a/TypeScript/baseTypeScript/.vscode/settings.json
+++ b/TypeScript/baseTypeScript/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
   "code-runner.executorMap": {
       "typescript": "npx ts-node --files --transpile-only",
-  }
+  },
+  "cSpell.words": [
+    "Kurek",
+    "popado"
+  ]
 }
