--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 # Created by https://www.toptal.com/developers/gitignore/api/node
 # Edit at https://www.toptal.com/developers/gitignore?templates=node
 
+
+# bundles
+
+bundle.js
+bundle.js.map
 ### Node ###
 # Logs
 logs
